fix reflectDimensions show overflow if needed

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -153,6 +153,8 @@ h1 {
 
       &.section-show-overflow {
 
+        overflow: auto;
+
         .section-column-chart {
           overflow-y: auto;
           overflow-x: hidden;
